@@ -32,6 +32,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 9628) Show warnings about slave lag on Special:Contributions,
   Special:Watchlist
 * (bug 8818) Expose "wpDestFile" as parameter $1 to "uploaddisabledtext"
+* (bug 9886) Give a sample stub link in stub threshold label in preferences
   
 == Bugfixes since 1.10 ==
 
